Correcte the check for max_bits, so we avoid the overflow.

BUG:323812
FIXED-IN: 4.11.1